Implement header, body, and restaurant card components; add CSS styles for layout and design

--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Namaste React</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 
 <body>
-    <div id="header">
-        <h1>Ritesh Bhosale</h1>
+    <div id="root">
+        <h1>not reendered yet
+        </h1>
     </div>
-    <div id="root"></div>
 
     <script type="module" src="App.js"></script>
 </body>
